# libopencm3

./: .gitignore  CMakeLists.txt  README.md
include/libopencm3/lpc17xx/: clock.h  gpio.h  i2c.h  memorymap.h  ssp.h  uart.h
lib/cm3/: assert.c
lib/lpc17xx/: clock.c  gpio.c  i2c.c  ssp.c  uart.c
